# pyqt-spellcheck

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/: example.py  example_word_list.txt
pyqt_spellcheck/: __init__.py  correction_action.py  highlighter.py  spellcheckwrapper.py  spelllineedit.py  spelltextedit.py  util.py
src/: correction_action.py  example.py  highlighter.py  spellcheckwrapper.py  spelltextedit.py
tests/: test_util.py
