[tool.poetry]
name = "pyqt-spellcheck"
version = "0.2.1"
description = "Spellchecking QTextEdit widget"
license = "MIT"
authors = ["Nethum Lamahewage"]
readme = "README.md"
repository = "https://github.com/NethumL/pyqt-spellcheck"
keywords = ["pyqt5", "spellcheck"]
exclude = ["examples"]

[tool.poetry.dependencies]
python = ">=3.9"
pyenchant = "^3.2.2"
pyqt5 = "^5.15.10"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
mypy = "^1.8.0"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Allow camelCase for variables and functions
    "N802",
    "N803",
    "N806",
    "N815",
    "N816",

    # Allow undocumented, except classes
    "D100",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",

    "D203", # Have a blank line after class docstring
    "D213", # Start multi-line docstring at first line

    # Annotations
    "ANN",

    # unittest
    "PT009",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
